# November_2025_Chickman_game

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  LICENSE  PROJECT_SUMMARY.md  README.md  SPRITE_TEMPLATE.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
docs/: DEVELOPMENT_RULES.md  GAME_DESIGN.md  ROADMAP.md
src/pacman/: __init__.py  game.py
src/pacman/assets/: README.md
src/pacman/entities/: __init__.py  collectibles.py  fox.py  ghost.py  player.py
src/pacman/maps/: __init__.py  maze.py
src/pacman/ui/: __init__.py
src/pacman/utils/: constants.py
tests/: __init__.py  test_basic.py
